; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-mq-debugfs.c_queue_poll_stat_show.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-mq-debugfs.c_queue_poll_stat_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.request_queue = type { i32* }

@BLK_MQ_POLL_STATS_BKTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"read  (%d Bytes): \00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"write (%d Bytes): \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.seq_file*)* @queue_poll_stat_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @queue_poll_stat_show(i8* %0, %struct.seq_file* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca %struct.request_queue*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.seq_file* %1, %struct.seq_file** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.request_queue*
  store %struct.request_queue* %8, %struct.request_queue** %5, align 8
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %48, %2
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @BLK_MQ_POLL_STATS_BKTS, align 4
  %12 = sdiv i32 %11, 2
  %13 = icmp slt i32 %10, %12
  br i1 %13, label %14, label %51

14:                                               ; preds = %9
  %15 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 9, %16
  %18 = shl i32 1, %17
  %19 = call i32 @seq_printf(%struct.seq_file* %15, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %18)
  %20 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %21 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  %22 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i32, i32* %6, align 4
  %25 = mul nsw i32 2, %24
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %23, i64 %26
  %28 = call i32 @print_stat(%struct.seq_file* %20, i32* %27)
  %29 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %30 = call i32 @seq_puts(%struct.seq_file* %29, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %31 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 9, %32
  %34 = shl i32 1, %33
  %35 = call i32 @seq_printf(%struct.seq_file* %31, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i32 %34)
  %36 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %37 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  %38 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %37, i32 0, i32 0
  %39 = load i32*, i32** %38, align 8
  %40 = load i32, i32* %6, align 4
  %41 = mul nsw i32 2, %40
  %42 = add nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %39, i64 %43
  %45 = call i32 @print_stat(%struct.seq_file* %36, i32* %44)
  %46 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %47 = call i32 @seq_puts(%struct.seq_file* %46, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %48

48:                                               ; preds = %14
  %49 = load i32, i32* %6, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %6, align 4
  br label %9

51:                                               ; preds = %9
  ret i32 0
}

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, i32) #1

declare dso_local i32 @print_stat(%struct.seq_file*, i32*) #1

declare dso_local i32 @seq_puts(%struct.seq_file*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
